--- a/index.html
+++ b/index.html
@@ -1,16 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html data-ng-app="calculatorApp">
     <head>
-        <title>Simple calculator</title>
+        <title>Calculator</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet/less" href="css/main.less">
-        <script src="vendor/less.min.js" type="text/javascript"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.0/react.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.0/JSXTransformer.js"></script>
+        <script src="bower_components/less/dist/less.min.js"></script>
+        <script src="bower_components/angular/angular.min.js"></script>
+        <script src="js/app.js"></script>
     </head>
     <body>
-        <div id="calculator"></div>
-        <script type="text/jsx;harmony=true" src="js/calculator.js"></script>
+        <div id="calculator" data-ng-controller="CalculatorCtrl">
+            <div class="calc-box">
+                <h1>Calculator</h1>
+                <div class="row">
+                    <div class="calc-body">
+                        <div class="show-result">
+                            <input type="text" readonly placeholder="0" data-ng-model="res">
+                        </div>
+                        <div class="buttons">
+                            <button data-ng-repeat="button in buttons" class="calc-button button-{{$index}}" data-ng-click="update(button)">{{button}}</button>
+                        </div>
+                    </div>
+                    <div class="calc-history">
+                        <h3>Calculator history</h3>
+                        <div class="item" data-ng-repeat="item in historyItems">{{item}}</div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
