--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
     <head>
         <title>Calculator</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1, maximum-scale=1">
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
+        <link rel="apple-touch-icon" sizes="144x144" href="img/calculator-144.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="img/calculator-72.png">
+        <link rel="apple-touch-icon" sizes="32x32" href="img/calculator-32.png">
+        <link rel="apple-touch-icon" href="img/calculator-16.png">
         <link rel="stylesheet/less" href="css/main.less">
         <script src="bower_components/less/dist/less.min.js"></script>
         <script src="bower_components/angular/angular.min.js"></script>
